# liquet

./: Anchor.toml  Cargo.toml  README.md  SEAM.md  STAGE_ERC8004_VALIDATOR.md
crates/liquet-release-gate/: Cargo.toml  INTEGRATION.md  LAYOUT.md
crates/liquet-release-gate/src/: lib.rs  main.rs
crates/liquet-release-gate/ts/: package.json
crates/liquet-release-gate/ts/src/: index.ts
programs/liquet-gate/: .gitignore  Cargo.toml  DEPLOYMENTS.md  README.md
programs/liquet-gate/driver/: Cargo.toml  README.md
programs/liquet-gate/driver/src/: main.rs
programs/liquet-gate/src/: authorization.rs  ed25519.rs  lib.rs
src/: attest.rs  decide.rs  lib.rs  seam.rs
src/adapters/: custos.rs  mod.rs  probatio.rs  xvm_custos.rs
src/erc8004/: liquet_validator.rs  mod.rs  store.rs  validator.rs
web/: index.html  settlement-release-console.html
