[package]
name = "liquet"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Neutral re-execution + invariant gate for cross-VM settlement. Consumes verification primitives (Custos, probatio, intentio) through one seam; answers settle/hold before funds move."
repository = "https://github.com/psyto/liquet"

# The core (`seam`, `decide`) has ZERO heavy deps and always compiles.
# Wiring to a producer primitive lives behind a feature so the contract can
# evolve independently of any in-flight primitive (Custos, probatio, ...).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
# Slot-2 producer (SVM invariant screen). Path dep — Liquet consumes, never absorbs.
custos-engine = { path = "../custos/engine", optional = true }
# Slot-1 producer (cross-VM re-exec + reconcile). In-process revm + LiteSVM, no
# network. Heavy build (revm + solana from source).
probatio-xvm = { path = "../probatio/probatio-xvm", optional = true }
# Direct only because the offline walking-skeleton builds the same local
# LiteSVM transactions that Custos captures; versions match custos-engine.
base64 = { version = "0.22", optional = true }
litesvm = { version = "0.13", optional = true }
solana-account = { version = "3", optional = true }
solana-address = { version = "2.2.0", optional = true }
solana-keypair = { version = "3.1", optional = true }
solana-pubkey = { version = "3", optional = true }
solana-signer = { version = "3", optional = true }
solana-transaction = { version = "3", optional = true }

[features]
default = []
# Turn on the Custos adapter + the walking-skeleton slice binary.
wire-custos = [
    "dep:base64",
    "dep:custos-engine",
    "dep:litesvm",
    "dep:sha2",
    "dep:solana-account",
    "dep:solana-keypair",
    "dep:solana-pubkey",
    "dep:solana-signer",
    "dep:solana-transaction",
]
# Turn on the probatio cross-VM adapter + the intent-lifecycle demo.
wire-probatio = ["dep:probatio-xvm", "dep:solana-address"]
# Live Slot 2: Custos screens probatio's exact SVM leg (needs both producers).
wire-xvm = ["wire-probatio", "wire-custos"]

[[bin]]
name = "liquet-slice"
path = "src/bin/slice.rs"
required-features = ["wire-custos"]

[[bin]]
name = "liquet-xvm-demo"
path = "src/bin/xvm_demo.rs"
required-features = ["wire-probatio"]
