[package]
name = "liquet-gate"
version = "0.1.0"
edition = "2021"
description = "On-chain enforcement point: releases Solana escrow only on a Liquet-signed Settle verdict."
license = "Apache-2.0"
repository = "https://github.com/psyto/liquet"

[lib]
crate-type = ["cdylib", "lib"]
name = "liquet_gate"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# REVIEW(codex): pin to the Anchor toolchain actually installed for the build.
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

# Isolate this program from the parent `liquet` package: its own workspace root,
# its own lockfile, its own (Anchor/SBF) dependency graph. This keeps the
# existing `cargo test` at the repo root completely unaffected.
[workspace]
